--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,54 +1,97 @@
 <h1>Listing Requests</h1>
 
-<% if @requests.any? %>
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Start date</th>
-        <th>End date</th>
-        <th>Project Association</th>
-        <th>Location</th>
-        <th>Department</th>
-        <th>Group</th>
-        <th>Open</th>
-        <th>Created by</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @requests.each do |request| %>
+<div id="open">
+  <h2>Open Requests</h2>
+  <% if @requests.where(:open => true).any? %>
+    <table>
+      <thead>
         <tr>
-          <td><%= request.name %></td>
-          <td><%= request.description %></td>
-          <td><%= request.start_date %></td>
-          <td><%= request.end_date %></td>
-          <td><%= request.project.name %></td>
-          <td><%= request.location.name%></td>
-          <td><%= request.department.name %></td>
-          <td><%= request.group.name %></td>
-          <td><%= request.open %></td>
-          <td><%= request.user.full_name %></td>
-          <td><%= link_to 'Show', request %></td>
-          <td><%= link_to 'Edit', edit_request_path(request) %></td>
-          <td><%= link_to 'Show Interest', new_request_response_path(request) %></td>
-          <td>
-            <% if current_user.admin? || owner_of?(request) %>
-              <%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %>
-            <% end %>
-          </td>
+          <th>Name</th>
+          <th>Description</th>
+          <th>Start date</th>
+          <th>End date</th>
+          <th>Project Association</th>
+          <th>Location</th>
+          <th>Department</th>
+          <th>Group</th>
+          <th>Created by</th>
+          <th colspan="3"></th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% else %>
-  <div class="center_text">
-    There are no active requests.
-  </div>
-<% end %>
+      </thead>
+  
+      <tbody>
+        <% @requests.where(:open => true).each do |request| %>
+          <tr>
+            <td><%= request.name %></td>
+            <td><%= request.description %></td>
+            <td><%= request.start_date %></td>
+            <td><%= request.end_date %></td>
+            <td><%= request.project.name %></td>
+            <td><%= request.location.name%></td>
+            <td><%= request.department.name %></td>
+            <td><%= request.group.name %></td>
+            <td><%= request.user.full_name %></td>
+            <td><%= link_to 'Show', request %></td>
+            <td><%= link_to 'Edit', edit_request_path(request) %></td>
+            <td><%= link_to 'Show Interest', new_request_response_path(request) %></td>
+            <td>
+              <% if current_user.admin? || owner_of?(request) %>
+                <%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <% else %>
+      <div class="center_text">
+        There are no closed requests.
+      </div>
+    <% end %>
+</div>
+<br>
 
+<div id="closed">
+  <h2>Closed Requests</h2>
+    <% if @requests.where(:open => false).any? %>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Description</th>
+          <th>Start date</th>
+          <th>End date</th>
+          <th>Project Association</th>
+          <th>Location</th>
+          <th>Department</th>
+          <th>Group</th>
+          <th>Created by</th>
+        </tr>
+      </thead>
+  
+      <tbody>
+        <% @requests.where(:open => false).each do |request| %>
+          <tr>
+            <td><%= request.name %></td>
+            <td><%= request.description %></td>
+            <td><%= request.start_date %></td>
+            <td><%= request.end_date %></td>
+            <td><%= request.project.name %></td>
+            <td><%= request.location.name%></td>
+            <td><%= request.department.name %></td>
+            <td><%= request.group.name %></td>
+            <td><%= request.user.full_name %></td>
+            <td><%= link_to 'Show', request %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <% else %>
+      <div class="center_text">
+        There are no closed requests.
+      </div>
+    <% end %>
+</div>
 <br>
 
 <%= link_to 'New Request', new_request_path %>
